Some object types don't draw bounds other than "Box" #35663

Closed
opened 2013-06-07 19:18:11 +02:00 by Pablo Vazquez · 3 comments
Member

%%%Noticed some object types such as cameras, lamps, empties and others, don't display a bounds other than "Box" type, when set on the Display panel under Object properties.

Attached a .blend file showing which object types work and which doesn't. I set all the objects to have "Sphere" bound type, but only some work.

Fedora 18, NVIDIA 8800 GT
Trunk SVN, tested on r57282

It might not make a lof of sense for objects like empty or cameras to draw different types, but I think it does from a user perspective. In my case I'm working with plenty of lights, and I wanted a way to recognize them quickly by using a different bounds draw type for each, same goes for cameras, (not for empties, since they have their own draw shape).

Uploaded the file here as well just in case:
http://pasteall.org/blend/21956

Thanks!%%%

%%%Noticed some object types such as cameras, lamps, empties and others, don't display a bounds other than "Box" type, when set on the Display panel under Object properties. Attached a .blend file showing which object types work and which doesn't. I set all the objects to have "Sphere" bound type, but only some work. Fedora 18, NVIDIA 8800 GT Trunk SVN, tested on r57282 It might not make a lof of sense for objects like empty or cameras to draw different types, but I think it does from a user perspective. In my case I'm working with plenty of lights, and I wanted a way to recognize them quickly by using a different bounds draw type for each, same goes for cameras, (not for empties, since they have their own draw shape). Uploaded the file here as well just in case: http://pasteall.org/blend/21956 Thanks!%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57324.%%%

%%%fixed r57324.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35663
No description provided.