fix [#35663] Some object types don't draw bounds other than "Box"